--- a/style.css
+++ b/style.css
@@ -1,1 +1,142 @@
 
+ 
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;600;900&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    text-decoration: none;
+    
+}
+
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px 10%;
+    background: transparent;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
+}
+
+.navbar a.active,
+.navbar a:hover {
+    background: linear-gradient(45deg, #f06, #3cf );
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+}
+
+.logo {
+    font-size: 25px;
+    color:black;
+    text-decoration: none;
+    font-weight: 900;
+    pointer-events: none;
+    animation: slideTop 1s ease forwards;
+}
+.left-container {
+    width: 100vw;
+    height: 100%;
+    position: relative;
+    display: flex;
+    justify-content: space-between ;
+    align-items: center;
+    padding: 200px 10% 0;
+}
+
+.h1 {
+    font-size: 26px;
+    font-weight: 900;
+    line-height: 1.2;
+    padding-bottom: 10%;
+    
+}
+
+.social {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    width: 40px;
+    height: 80px;
+    font-size: 24px;
+    color: #000;
+    text-decoration: none;
+    align-items: center;
+}
+
+.btn a {
+    position: relative;
+    display: inline-flex; 
+    align-items: center;
+    width: 180px;
+    height: 42px;
+    border-radius: 30px;
+    font-size: 16px;
+    text-decoration: none;
+    font-weight: 600;
+    letter-spacing: 1px;
+    background-color: #000;
+    color: lightgrey;
+    justify-content: center;
+    width: auto;
+    padding: 10px 20px;
+
+}
+
+.btn:hover a {
+    background: linear-gradient(45deg, #f06, #3cf );
+
+}
+
+.navbar a {
+    font-size: 18px;
+    text-decoration: none;
+    color: black;
+    font-weight: 600;
+    margin-left: 35px; 
+}
+
+.social i {
+    font-size: 26px;
+    text-decoration: none;
+    color: lightgray;
+    border-radius: 50%;
+    padding: 0.5rem;
+    background: black;
+    margin: 0.5rem;
+}
+
+.fb:hover i {
+    background: linear-gradient(45deg, #f06, #3cf );
+  
+}
+.insta:hover i {
+    background: linear-gradient(45deg, #f06, #3cf );
+  
+}
+.tiktok:hover i {
+    background: linear-gradient(45deg, #f06, #3cf );
+  
+}
+
+body {
+    background-color: lightgray;
+}
+
+.content {
+    background: url(assets/SPETER.hu.png);
+    background-repeat:no-repeat;
+    background-size: cover;
+    
+}
+
+span {
+    background: linear-gradient(45deg, #f06, #3cf );
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+}
