--- a/style.css
+++ b/style.css
@@ -39,34 +39,154 @@
     pointer-events: none;
     animation: slideTop 1s ease forwards;
 }
-.left-container {
-    width: 100vw;
-    height: 100%;
-    position: relative;
+
+.content {
+    background: url(assets/SPETER.hu.png);
     display: flex;
-    justify-content: space-between ;
+    flex-wrap: wrap;
+    height: 100vh;
+    background-repeat:no-repeat;
+    background-size: cover;
+}
+
+.content > * {
+    flex-basis: 50%;
+    padding: 1rem;
+    
+}
+
+/*dropdown menu */
+
+
+
+.navbar .toggle_btn {
+    color: rgb(0, 0, 0);
+    font-size: 1.5rem;
+    cursor:  pointer;
+    display: none; 
+}
+
+li > a {
+    color: #000;
+    font-weight: 600;
+}
+
+li > a:hover {
+    background: linear-gradient(45deg, #f06, #3cf );
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+}
+
+.dropdown_menu  {
+    display: none;
+    position: absolute;
+    right: 2rem;
+    height: 0;
+    top: 60px;
+    width: 300px; 
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(15px);
+    border-radius: 10px;
+    overflow: hidden;
+    transition: height .2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+
+.dropdown_menu li {
+    padding: 0.7rem;
+    display: flex;
+    color: #000;
     align-items: center;
+    justify-content: center;
+    text-decoration: none;
+}
+
+
+.dropdown_menu .action_btn {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
+}
+
+.dropdown_menu.open {
+    height: 260px;
+}
+
+@media (max-width: 576px) {
+    .content > * {
+    flex-basis: 100%;
+    }
+    .left-container {
+    width: 100%;
+    padding: 200px 10% 0;
+    text-align: center; 
+    }
+    .right-container {
+    width: 100%;
+    align-items:center;
+    text-align: center; 
+    }
+    }
+
+    @media (max-width: 992px) {
+        .navbar .link,
+        .navbar
+        .action_btn {
+         display: none; 
+        }  
+       .navbar .toggle_btn{
+           display: block;
+       } 
+       .dropdown_menu {
+          display: block;
+       }
+    }
+    @media (max-width: 576px){
+       .dropdown_menu {
+           left: 2rem;
+           width: unset;
+       }
+    }
+
+.left-container {
+    width: 50%;
+    display: flex;
+    position: relative;
+    justify-content: space-between ;
     padding: 200px 10% 0;
 }
 
+.right-container {
+    width: 50%;
+    justify-content: center;
+    position: relative;
+    align-items:flex-start;
+    display: flex;
+    flex-direction: column;
+}
+
 .h1 {
-    font-size: 26px;
+    font-size: 29px;
     font-weight: 900;
     line-height: 1.2;
     padding-bottom: 10%;
     
 }
 
+.h3 {
+    margin-bottom: 30px;
+}
+
 .social {
+    display: inline-flex;
     position: relative;
-    display: flex;
-    justify-content: space-between;
-    width: 40px;
+    align-items: center;
+    justify-content: center;
     height: 80px;
     font-size: 24px;
     color: #000;
     text-decoration: none;
-    align-items: center;
 }
 
 .btn a {
@@ -84,12 +204,15 @@
     color: lightgrey;
     justify-content: center;
     width: auto;
+    margin-top: 20px;
     padding: 10px 20px;
 
 }
 
 .btn:hover a {
     background: linear-gradient(45deg, #f06, #3cf );
+    transform: scale(1.1);
+    transition: all 0.1s ease-in-out;
 
 }
 
@@ -103,6 +226,7 @@
 
 .social i {
     font-size: 26px;
+    justify-content: center;
     text-decoration: none;
     color: lightgray;
     border-radius: 50%;
@@ -113,27 +237,39 @@
 
 .fb:hover i {
     background: linear-gradient(45deg, #f06, #3cf );
+    transform: scale(1.2);
+    transition: all 0.1s ease-in-out;
+
   
 }
 .insta:hover i {
     background: linear-gradient(45deg, #f06, #3cf );
-  
+    transform: scale(1.2);
+    transition: all 0.1s ease-in-out;
+
 }
 .tiktok:hover i {
     background: linear-gradient(45deg, #f06, #3cf );
-  
+    transform: scale(1.2);
+    transition: all 0.1s ease-in-out;
+
 }
 
 body {
     background-color: lightgray;
 }
 
-.content {
-    background: url(assets/SPETER.hu.png);
-    background-repeat:no-repeat;
-    background-size: cover;
-    
+
+img:hover {
+    transform: scale(1.1);
+    transition: all 0.5s ease-in-out;
+
 }
+
+img {
+    padding: 1px;
+    border-radius: 50%;
+  }
 
 span {
     background: linear-gradient(45deg, #f06, #3cf );
