--- a/style.css
+++ b/style.css
@@ -20,12 +20,13 @@ body {
     left: 0;
     width: 100%;
     padding: 20px 10%;
-    background: transparent;
+    background: lightgray;
     display: flex;
     justify-content: space-between;
     align-items: center;
     z-index: 100;
 }
+
 
 .navbar a.active,
 .navbar a:hover {
