--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
 }
 
 .content {
-    background: url(assets/SPETER.hu.png);
+    background: url(assets/SPETERhu.png);
     display: flex;
     flex-wrap: wrap;
     height: 100vh;
