--- a/style.css
+++ b/style.css
@@ -19,12 +19,13 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    padding: 20px 10%;
+    padding: 20px 0%;
+    padding-inline-end: 40px;
     background: lightgray;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    z-index: 100;
+    z-index: 1;
 }
 
 
@@ -36,6 +37,7 @@ body {
 }
 
 .logo {
+    padding-left: 10%;
     font-size: 25px;
     color:black;
     text-decoration: none;
@@ -48,6 +50,7 @@ body {
     background-image: url(assets/hatter.png);
     display: flex;
     flex-wrap: wrap;
+    width: 100%;
     height: 100vh;
     background-repeat:no-repeat;
     background-size: cover;
@@ -84,52 +87,46 @@ li > a:hover {
 .dropdown_menu  {
     display: none;
     position: absolute;
-    right: 2rem;
     height: 0;
-    top: 60px;
-    width: 300px; 
-    background: rgba(255, 255, 255, 0.1);
-    backdrop-filter: blur(15px);
-    border-radius: 10px;
+    top: 70px;
+    background: lightgray;
+    border-radius: 0px;
     overflow: hidden;
-    transition: height .2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 
 .dropdown_menu li {
-    padding: 0.7rem;
+    position: relative;
     display: flex;
     color: #000;
     align-items: center;
+    font-size: 33px;
     justify-content: center;
     text-decoration: none;
+    padding: 0.875rem 1.875rem;
 }
 
-
-.dropdown_menu .action_btn {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-
-}
 
 .dropdown_menu.open {
-    height: 260px;
+    position: absolute;
+    height: 100vh;
+    width: 100%;
+    transition: .2s ease-in-out;
 }
 
 @media (max-width: 576px) {
     .content > * {
-    flex-basis: 100%;
+        flex-basis: 100%;
     }
     .left-container {
-    width: 100%;
-    padding: 200px 10% 0;
-    text-align: center; 
+        width: 100%;
+        padding: 200px 10% 0;
+        text-align: center; 
     }
     .right-container {
-    width: 100%;
-    align-items:center;
-    text-align: center; 
+        width: 100%;
+        align-items:center;
+        text-align: center;
     }
     }
 
@@ -144,12 +141,13 @@ li > a:hover {
        } 
        .dropdown_menu {
           display: block;
+
        }
     }
     @media (max-width: 576px){
        .dropdown_menu {
-           left: 2rem;
-           width: unset;
+           width: 100vw;
+
        }
     }
 
@@ -172,7 +170,8 @@ li > a:hover {
 }
 
 img {
-    border-radius: 50%;
+    position: relative;
+    top: 100px;
     overflow: hidden;
   }
 
