--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ li > a:hover {
 }
 
 .dropdown_menu  {
-    display: none;
+    display: flex;
     position: absolute;
     height: 0;
     top: 70px;
@@ -104,6 +104,8 @@ li > a:hover {
     justify-content: center;
     text-decoration: none;
     padding: 0.875rem 1.875rem;
+    text-transform: uppercase;
+
 }
 
 
@@ -147,7 +149,9 @@ li > a:hover {
     @media (max-width: 576px){
        .dropdown_menu {
            width: 100vw;
-
+           display: flex;
+           flex-direction: column;
+           gap: 30px;
        }
     }
 
@@ -276,3 +280,4 @@ span {
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
 }
+
