--- a/style.css
+++ b/style.css
@@ -51,15 +51,13 @@ body {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background-repeat:no-repeat;
     background-size: cover;
 }
 
 .content > * {
     flex-basis: 50%;
-    padding: 1rem;
-    
 }
 
 /*dropdown menu */
@@ -121,7 +119,7 @@ li > a:hover {
     }
     .left-container {
         width: 100%;
-        padding: 200px 10% 0;
+        padding: 200px 10% 10% 0;
         text-align: center; 
     }
     .right-container {
@@ -166,7 +164,7 @@ li > a:hover {
     display: flex;
     position: relative;
     justify-content: space-between ;
-    padding: 200px 10% 0;
+    padding: 200px 10% 0% 10%;
 }
 
 .right-container {
@@ -188,18 +186,17 @@ img {
 /* .img:hover {
     transform: scale(1.1);
     transition: all 0.5s ease-in-out;
-} */
+} *//assets/homeself.png
 
-.h1 {
-    font-size: 29px;
-    font-weight: 900;
-    line-height: 1.2;
-    padding-bottom: 10%;
-    
-}
 
 .h3 {
     margin-bottom: 30px;
+}
+.h1 {
+    font-size: 30px;
+    font-weight: 900;
+    line-height: 1;
+    padding-bottom: 10%;
 }
 
 .social {
@@ -279,11 +276,20 @@ img {
 
 }
 
-
-
 span {
     background: linear-gradient(45deg, #f06, #3cf );
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
 }
 
+.second_block {
+    height: 200px;
+    width: 100vw;
+    background-color:darkgrey;
+    z-index: -1;
+}
+
+
+.first_block {
+    height: 100vh;
+}
