--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body {
 
 .navbar a {
     font-size: 18px;
+    display: block-inline;
     text-decoration: none;
     color: black;
     font-weight: 600;
@@ -257,7 +258,7 @@ h3 {
 h2 {
     color: black;
     padding-top: 10%;
-    padding-bottom: 10%;
+    padding-bottom: 5%;
     font-size: 3rem;
 }
 
@@ -275,13 +276,11 @@ p {
     background:black;
     width: 100%;
     height: 100wv;
-    color: white;
-
-  
+    background: radial-gradient(circle, rgba(252,70,107,1) 0%, rgba(0,0,0,1) 30%);
 }
 
+
 .third-text {
-    padding: 0% 10% 10% 10%;
     position: relative;
     text-align: center;
 }
@@ -289,10 +288,96 @@ p {
 .third-h2 {
     font-size: 3rem;
     color: lightgray;
+    padding: 10% 10% 3% 10%;
+
 }
 
 p {
     color: lightgray;
+}
+
+/*boxes block */
+
+.boxes {
+    padding-right: 10%;
+    padding-left: 10%;
+    padding-bottom: 10%;
+}
+
+.box {
+    position: relative;
+    display: inline-block;
+    border-radius: 16px;
+    margin: .3%;
+    height: 300px;
+    width: 200px;
+    background: rgba(255, 255, 255, 0.15);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(13.1px);
+    -webkit-backdrop-filter: blur(13.1px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.musictext {
+    text-align: left;
+    font-size: 16px;
+    padding-left: 5%;
+    font-weight: 600;
+}
+
+.musictitlebox {
+    display: inline-block;
+    width: 100%;
+    text-align: left;
+}
+
+.musictitle {
+    width: 50%;
+    display: inline-block;
+    font-size: 12px;
+    padding-left: 5%;
+    padding-top: 3%;
+    padding-bottom: 3%;
+}
+
+.time {
+    width: 40%;
+    display: inline-block;
+    text-align: right;
+    font-size: 12px;
+    padding-top: 3%;
+    padding-bottom: 3%;
+    
+}
+
+.line {
+    border-top: 1px solid #lightgray;
+    margin-left: 5%;
+    margin-right: 5%;
+    opacity: .2;
+}
+
+.tomodell {
+    width: 100%;
+    padding: 5%;
+    border-radius: 16px;
+}
+
+.kiskep {
+    width: 20px;
+    border-radius: 50%;
+    padding-top: 5%;
+    padding-left: 5%;
+    padding-bottom: 5%;
+    display: flex;
+}
+
+.subtitle {
+    width: 150px;
+    font-size: 8px;
+    margin-left: 5px;
+    vertical-align: middle;
+    text-align: left;
 }
 
 /*responsive style */
@@ -329,6 +414,12 @@ p {
         font-size: 2rem;
         padding-bottom:10%;
 
+    }
+
+    .box {
+        width: 100%;
+        height: auto;
+        margin-bottom: 1rem;
     }
     }
 
