--- a/style.css
+++ b/style.css
@@ -388,15 +388,19 @@ p {
     }
     .left-container {
         width: 100%;
-        text-align: center; 
+        text-align: center;
+        margin-bottom: 5rem; 
     }
     .right-container  {
         width: 100%;
         height: 100vw;
         margin-left: 25%;
+        margin-bottom: 5rem; 
+
     }
     .second-block {
         padding-top: 10%;
+        height: 100%;
     }
     h2  {
         padding-bottom: 10%;
@@ -413,13 +417,12 @@ p {
     .third-h2 {
         font-size: 2rem;
         padding-bottom:10%;
-
     }
 
     .box {
         width: 100%;
         height: auto;
-        margin-bottom: 1rem;
+        margin-bottom: 2rem;
     }
 
 .tomodell {
