--- a/style.css
+++ b/style.css
@@ -242,7 +242,7 @@ h3 {
 
 .second-block {
     background:linear-gradient(180deg, rgb(211, 211, 211), rgb(0, 0, 0) );
-    max-height: 100vh;
+    max-height: 400px;
     width: 100%;
   
 }
@@ -260,6 +260,12 @@ h2 {
     padding-top: 10%;
     padding-bottom: 5%;
     font-size: 3rem;
+}
+
+.first-hr {
+    width: 10%;
+    margin-bottom: 5%;
+
 }
 
 p {
