--- a/style.css
+++ b/style.css
@@ -290,10 +290,16 @@ p {
 .third-block {
     width: 100%;
     height: 100wv;
-    background: radial-gradient(circle, rgba(252,70,107,1) 0%, rgba(0,0,0,1) 30%);
+    background: black;
+    overflow: hidden;
 
 }
 
+.gradient {
+    background: radial-gradient(circle, rgba(252,70,107,1) 0%, rgba(0, 0, 0, 0) 30%);
+    height: 100vh;
+    margin-bottom: -650px;
+}
 
 .third-text {
     position: relative;
@@ -476,6 +482,9 @@ align-items: center;
         position: relative;
 
     }  
+
+    .third-text {
+    }
 
     .third-h2 {
         font-size: 2rem;
